--- a/index.html
+++ b/index.html
@@ -4,12 +4,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>스타벅스 클론코딩</title>
+    <title>홀트아동복지회 클론코딩</title>
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="script/main.js"></script>
 </head>
 <body>
+    <header>
+        <div class="top_contener">
+            <div class="top_bgslide">
+                <div id ="top_bar">
+                 <div class="logo">
+                     <a href="#"><img src="images/logo.jpg" alt ="영림"></a>
+                 </div>
+                 <nav>
+                    <ul>
+                        <li><a href="#">브랜드</a></li>
+                        <li><a href="#">제품</a></li>
+                        <li><a href="#">인테리어 솔루션</a></li>
+                        <li><a href="#">메거진.Y</a></li>
+                        <li><a href="#">쇼룸</a></li>햣
+                    </ul>
+                 </nav>
+                 <div class="login">
+                     <ul>
+                         <li><a href="#"><img src="images/search.png" alt = "검색"></a></li>
+                         <li><a href="#"><img src="images/wishlist.png" alt = "위시리스트"></a></li>
+                         <li><a href="#"><img src="images/logoin.png" alt = "로그인"></a></li>
+                     </ul>
+                 </div>
+            </div>
+            </div>
+        </div>
+    </header>
+    <div class = "material">
+        <div class = "material_text">
+            <p>다양한 라이프속에 </p>
+        </div>
+    </div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
     
 </body>
 </html>
