--- a/index.html
+++ b/index.html
@@ -1,46 +1,48 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>영림토탈인테리어</title>
-    <link rel="shortcut icon" href="images/favicon.png" >
+    <link rel="shortcut icon" href="images/favicon.png">
     <link rel="stylesheet" href="css/style.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="script/main.js"></script>
 </head>
+
 <body>
     <header>
         <div class="top_contener">
             <div class="top_bg">
-                <div id ="top_bar">
-                 <div class="logo">
-                     <a href="#"><img src="images/logo.jpg" alt ="영림"></a>
-                 </div>
-                 <nav>
-                    <ul>
-                        <li><a href="#">브랜드</a></li>
-                        <li><a href="#">제품</a></li>
-                        <li><a href="#">인테리어 솔루션</a></li>
-                        <li><a href="#">메거진.Y</a></li>
-                        <li><a href="#">쇼룸</a></li>햣
-                    </ul>
-                 </nav>
-                 <div class="login">
-                     <ul>
-                         <li><a href="#"><img src="images/search.png" alt = "검색"></a></li>
-                         <li><a href="#"><img src="images/wishlist.png" alt = "위시리스트"></a></li>
-                         <li><a href="#"><img src="images/logoin.png" alt = "로그인"></a></li>
-                     </ul>
-                 </div>
-            </div>
+                <div id="top_bar">
+                    <div class="logo">
+                        <a href="#"><img src="images/logo.jpg" alt="영림"></a>
+                    </div>
+                    <div class="top_nav_warp">
+                        <ul class="top_nav">
+                            <li><a href="#">브랜드</a></li>
+                            <li><a href="#">제품</a></li>
+                            <li><a href="#">인테리어 솔루션</a></li>
+                            <li><a href="#">메거진.Y</a></li>
+                            <li><a href="#">쇼룸</a></li>햣
+                        </ul>
+                    </div>
+                    <div class="login">
+                        <ul>
+                            <li><a href="#"><img src="images/search.png" alt="검색"></a></li>
+                            <li><a href="#"><img src="images/wishlist.png" alt="위시리스트"></a></li>
+                            <li><a href="#"><img src="images/logoin.png" alt="로그인"></a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
     <section id="main">
-        <div class = "material">
-            <div class = "material_text">
+        <div class="material">
+            <div class="material_text">
                 <p>다양한 라이프스타일 속에서 최적화된 당신의 주거 공간을 디자인합니다.<br>
                     가치있는 당신의 일상을 위한 취향에 딱 맞는 인텐리어 디자인을 만나보세요.</p>
                 <p>Lifestyle design beyond material</p>
@@ -73,25 +75,25 @@
                     </div>
                     <div class="modern_img_react">
                         <div class="img_react1">
-                            <img src = "images/react1" alt="react1">
+                            <img src="images/react1" alt="react1">
                             <div class="img_react1_text">
                                 <span>Modchrome Photograph</span>"Ligingroom"
                             </div>
                         </div>
                         <div class="img_react2">
-                            <img src = "images/react2" alt="react2">
+                            <img src="images/react2" alt="react2">
                             <div class="img_react2_text">
                                 <span>Modchrome Photograph</span>"Enterance"
                             </div>
                         </div>
                         <div class="img_react_textimg">
-                            <img src = "images/textimg" alt="textimg">
+                            <img src="images/textimg" alt="textimg">
                             <div class="img_textimg_text">
                                 <img src="images/modern.png">
                             </div>
                         </div>
                         <div class="img_react3">
-                            <img src = "images/react3" alt="react3">
+                            <img src="images/react3" alt="react3">
                             <div class="img_react3_text">
                                 <span>Modchrome Photograph</span>"Livingroom"
                             </div>
@@ -237,11 +239,11 @@
                     <img src="images/Unalterable.jpg" alt="Unalterable">
                 </div>
                 <div class="Unalterable_main_text1">
-                    Unalterable Value  Over Time
+                    Unalterable Value Over Time
                 </div>
                 <div class="Unalterable_main_text2">
                     시간이 흐름에도 지속되는 삶의 가치를 담아 행복한 일상을 만들기 위해<br>
-                     영림의 디자이너들은 끊임없이 고민하고 연구합니다.
+                    영림의 디자이너들은 끊임없이 고민하고 연구합니다.
                 </div>
                 <div class="Unalterable_main_button">
                     더보러가기
@@ -326,7 +328,7 @@
                             <div class="contact_main_img_text">
                                 <span>Start Your Interior</span>
                                 <p>인테리어 어디서 시작하실지 막막하시죠<br>
-                                자제 선택부터 시공방법까지 하나하나 알려드릴게요</p>
+                                    자제 선택부터 시공방법까지 하나하나 알려드릴게요</p>
                                 <div class="contact_main_img_button">인테리어 시작하기</div>
                             </div>
                         </div>
@@ -338,7 +340,7 @@
                                 <span>Check Younglim Mark</span>
                                 <p>품질에 대한 자부심을 담은<br>
                                     영림제품에는 정품 마크가 표기되어 있습니다.<br>
-                                영림의 철학과 가치를 나타내는 정품마크를 확인해보세요.</p>
+                                    영림의 철학과 가치를 나타내는 정품마크를 확인해보세요.</p>
                                 <div class="contact_main_img_button">영림브랜드 아이덴티티</div>
                             </div>
                         </div>
@@ -378,8 +380,9 @@
                     </div>
                 </div>
             </div>
-        
+
         </div>
     </footer>
 </body>
+
 </html>
