--- a/index.html
+++ b/index.html
@@ -18,23 +18,25 @@
             <div class="top_bg">
                 <div id="top_bar">
                     <div class="logo">
-                        <a href="#"><img src="images/logo.jpg" alt="영림"></a>
+                        <a href="#"><img src="images/logo.png" alt="영림"></a>
                     </div>
-                    <div class="top_nav_warp">
-                        <ul class="top_nav">
-                            <li><a href="#">브랜드</a></li>
-                            <li><a href="#">제품</a></li>
-                            <li><a href="#">인테리어 솔루션</a></li>
-                            <li><a href="#">메거진.Y</a></li>
-                            <li><a href="#">쇼룸</a></li>햣
-                        </ul>
-                    </div>
-                    <div class="login">
-                        <ul>
-                            <li><a href="#"><img src="images/search.png" alt="검색"></a></li>
-                            <li><a href="#"><img src="images/wishlist.png" alt="위시리스트"></a></li>
-                            <li><a href="#"><img src="images/logoin.png" alt="로그인"></a></li>
-                        </ul>
+                    <div class="top_nav_warp_menu">
+                        <div class="top_nav_warp">
+                            <ul class="top_nav">
+                                <li><a href="#">브랜드</a></li>
+                                <li><a href="#">제품</a></li>
+                                <li><a href="#">인테리어 솔루션</a></li>
+                                <li><a href="#">메거진.Y</a></li>
+                                <li><a href="#">쇼룸</a></li>
+                            </ul>
+                        </div>
+                        <div class="login">
+                            <ul>
+                                <li><a href="#"><img src="images/top-search.png" alt="검색"></a></li>
+                                <li><a href="#"><img src="images/top-white.png" alt="위시리스트"></a></li>
+                                <li><a href="#"><img src="images/top-login.png" alt="로그인"></a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
